--- a/.github/ISSUE_TEMPLATE/1-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug-report.yml
@@ -26,10 +26,10 @@ body:
     label: Steps To Reproduce
     description: Steps to reproduce the behavior.
     placeholder: |
-      1. In this environment...
-      2. With this config...
-      3. Run '...'
-      4. See error...
+      1. Install Epinio to '...'
+      2. Push an app '....'
+      3. Look at cluster '....'
+      4. See error
   validations:
     required: false
 - type: textarea
@@ -39,12 +39,54 @@ body:
       examples:
         - **OS**: Linux
         - **Architecture**: arm64
+        - **Epinio Version**: 0.1.0
+        - **Cluster (please complete the following information):**
+          - Provider: [e.g. K3D, minikube, KinD, AKS, EKS, GKE, RKE, ...]
+          - Options: [e.g. number of nodes, storageclasses, loadbalancer if customised]
+          - Kubernetes Version: [e.g. 1.20]
+
     value: |
         - OS:
         - Architecture:
+        - Epinio Version:
+        - Cluster:
+          - Provider:
+          - Options:
+          - Kubernetes Version:
     render: markdown
   validations:
     required: false
+- type: textarea
+  attributes:
+    label: Logs
+    description: |
+      If applicable, add logs to help explain your problem.
+      You can use attachments to add a screenshot of your clusters state, e.g. from k9s.
+
+      If you paste long logs, you could also add them into a collapsed block:
+
+      &lt;details&gt;
+        &lt;summary&gt;Click to expand&lt;summary&gt;
+
+        \```
+        pasted log
+        \```
+      &lt;details&gt;
+
+      You can increase Epinio's logging by exporting these variables:
+
+      ```
+      export TRACE_LEVEL=255
+      export DEBUG=true
+      ```
+
+      To follow the server logs you can use:
+
+      `kubectl logs -n epinio -l app.kubernetes.io/name=epinio-server -c epinio-server -f`
+    render: markdown
+  validations:
+    required: false
+
 - type: textarea
   attributes:
     label: Anything else?
